<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <EditText
                    android:id="@+id/edPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginEnd="20sp"
                    android:hint="@string/price"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/edID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/id"
                    android:inputType="text" />
            </TableRow>

            <EditText
                android:id="@+id/editTitle_ar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="عنوان الكتاب بالعربى"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTitle_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="Book Title by english"
                android:inputType="text" />

            <EditText
                android:id="@+id/editDetails_ar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint=" تفاصيل الكتاب بالعربى لا تزيد عن 100 كلمة"
                android:inputType="text" />

            <EditText
                android:id="@+id/editDetails_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="Book details by english no more than 100 word"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_autor_ar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="أسم المؤلف"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_autor_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="Author"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upload_files"
                android:textColor="#fd0011"
                android:textSize="20sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:background="@drawable/draw">

                <TextView
                    android:id="@+id/tx_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textSize="18sp" />

                <ProgressBar
                    android:id="@+id/prgss_photo"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bt_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Upload_photo"
                    android:text="@string/upload_photo" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:background="@drawable/draw">

                <TextView
                    android:id="@+id/tx_Review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textSize="18sp" />

                <ProgressBar
                    android:id="@+id/prgss_Review"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bt_Review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Upload_review"
                    android:text="@string/upload_Review"

                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:background="@drawable/draw">

                <TextView
                    android:id="@+id/tx_Book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textSize="18sp" />

                <ProgressBar
                    android:id="@+id/prgss_Book"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bt_Book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Upload_book"
                    android:text="@string/upload_Book"

                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:background="@drawable/draw">

                <TextView
                    android:id="@+id/tx_CD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textSize="18sp" />

                <ProgressBar
                    android:id="@+id/prgss_CD"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bt_CD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Upload_CD"
                    android:text="@string/upload_CD" />
            </TableRow>

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="Upload_btn"
                android:src="@drawable/go_btn_action" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>